plug styles on mobile fix

--- a/src/components/TransactionsList/Plug/Plug.module.scss
+++ b/src/components/TransactionsList/Plug/Plug.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  margin: 0 auto;
 
   .text {
     font-family: 'Poppins';
